Kubernetes-notes/12.Ingress/05.ClientAffinity/manifest/affinity/Deploy-default.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: affinity-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: affinity
  template:
    metadata:
      labels:
        app: affinity
    spec:
      containers:
      - name: affinity-container
        image: 230882/affinity-demo:v1
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: affinity-service
  annotations:
    cloud.google.com/backend-config: '{"default": "my-backend-affinity"}'
spec:
  type: NodePort
  selector:
    app: affinity
  ports:
  - port: 80
    targetPort: 80
---
