Kubernetes-notes/12.Ingress/05.ClientAffinity/manifest/affinity/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: affinity-router
  annotations:
    kubernetes.io/ingress.class: "gce"
    external-dns.alpha.kubernetes.io/hostname: appaffinity.bjohn.online
spec:
  defaultBackend:
    service:
      name: affinity-service
      port:
        number: 80

---
